--- a/MyHome/app/src/main/res/layout/fragment_medical_history.xml
+++ b/MyHome/app/src/main/res/layout/fragment_medical_history.xml
@@ -41,6 +41,15 @@
         </android.support.v7.widget.CardView>
     </LinearLayout>
 
+    <View
+        android:id="@+id/toolbar_line"
+        android:layout_below="@+id/searchLayout"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:elevation="0.5dp"
+        android:layout_marginTop="19dp"
+        android:background="@color/md_blue_grey_650" />
+
     <TextView
         android:id="@+id/mcn_desc"
         android:layout_below="@+id/searchLayout"
@@ -73,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="22dp"
         android:focusable="true"
         android:groupIndicator="@null"
         android:nestedScrollingEnabled="true"
