--- a/MyHome/app/src/main/res/layout/fragment_medications.xml
+++ b/MyHome/app/src/main/res/layout/fragment_medications.xml
@@ -42,13 +42,22 @@
         </android.support.v7.widget.CardView>
     </RelativeLayout>
 
+    <View
+        android:id="@+id/toolbar_line"
+        android:layout_below="@+id/searchLayout"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:elevation="0.5dp"
+        android:layout_marginTop="19dp"
+        android:background="@color/md_blue_grey_650" />
+
     <TextView
         android:id="@+id/medicationDesc"
         style="@style/tradeGothicLTStd_Dynamic20"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/searchLayout"
-        android:layout_marginTop="32dp"
+        android:layout_below="@+id/toolbar_line"
+        android:layout_marginTop="14dp"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:text="@string/medication_desc" />
