--- a/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_cost.xml
@@ -1,190 +1,111 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:scrollbars="vertical">
 
         <LinearLayout
-            android:id="@+id/intake_layout"
+            android:id="@+id/whole_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="visible">
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="24dp"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/mcn_logo" />
+
+            <TextView
+                android:id="@+id/costInfo"
+                style="@style/tradeGothicLTStd_Dynamic20"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="58dp"
+                android:text="@string/visit_cost_desc"
+                android:textStyle="bold" />
 
             <LinearLayout
+                android:id="@+id/coupon_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="24dp"
-                android:layout_marginRight="24dp"
-                android:layout_marginTop="24dp"
-                android:orientation="vertical">
+                android:layout_marginTop="12dp"
+                android:orientation="horizontal"
+                android:visibility="visible">
 
-                <ImageView
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/coupon_code_edit_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="@string/visit_cost_coupon_code"
+                        android:inputType="textCapCharacters|textFilter|textNoSuggestions"
+                        tools:text="FREE"
+                        android:textAllCaps="true" />
+                </android.support.design.widget.TextInputLayout>
+
+                <Button
+                    android:id="@+id/apply_button"
+                    style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:src="@drawable/mcn_logo" />
-
-                <TextView
-                    android:id="@+id/costInfo"
-                    style="@style/tradeGothicLTStd_Dynamic20"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="58dp"
-                    android:text="@string/visit_cost_desc"
-                    android:textStyle="bold" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:orientation="horizontal"
-                    android:visibility="gone">
-
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                        <android.support.design.widget.TextInputEditText
-                            android:id="@+id/coupon_code_edit_text"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:hint="@string/visit_cost_coupon_code"
-                            android:inputType="textCapCharacters|textFilter|textNoSuggestions"
-                            android:text="FREE"
-                            android:textAllCaps="true" />
-                    </android.support.design.widget.TextInputLayout>
-
-                    <Button
-                        android:id="@+id/apply_button"
-                        style="@style/Widget.AppCompat.Button.Colored"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:text="@string/visit_cost_apply" />
-                </LinearLayout>
-
-                <TextView
-                    style="@style/tradeGothicLTStd_Dynamic18"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/my_care_reason_phone_sug" />
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/phone_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:errorEnabled="true"
-                    app:errorTextAppearance="@style/error_appearance"
-                    app:hintTextAppearance="@style/hint_appearance">
-
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/reasonPhone"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:ems="10"
-                        android:imeOptions="actionNext"
-                        android:inputType="phone"
-                        android:maxLength="12"
-                        android:maxLines="1"
-                        android:singleLine="true" />
-
-                </android.support.design.widget.TextInputLayout>
-
-                <TextView
-                    style="@style/tradeGothicLTStd_Dynamic18"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/my_care_reason_sug" />
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/reason_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:errorEnabled="true"
-                    app:errorTextAppearance="@style/error_appearance"
-                    app:hintTextAppearance="@style/hint_appearance">
-
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/reasonForVisit"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:inputType="textCapSentences"
-                        android:maxLines="1"
-                        android:singleLine="true" />
-
-                </android.support.design.widget.TextInputLayout>
+                    android:layout_gravity="bottom"
+                    android:text="@string/visit_cost_apply" />
             </LinearLayout>
 
-            <RelativeLayout
-                android:id="@+id/agree_privacy_policy_layout"
+            <TextView
+                android:id="@+id/coupon_info"
+                style="@style/tradeGothicLTStd_Dynamic18"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="18dp"
-                android:layout_marginLeft="18dp"
-                android:layout_marginRight="28dp">
+                android:layout_marginTop="16dp"
+                tools:text="Applied Coupon: FREE"
+                android:visibility="gone" />
 
-                <android.support.v7.widget.AppCompatCheckBox
-                    android:id="@+id/agree_privacy_policy_check"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="-3dp" />
-
-                <TextView
-                    android:id="@+id/agree_privacy_policy_text1"
-                    style="@style/tradeGothicLTStd_Dynamic18"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/agree_privacy_policy_check"
-                    android:labelFor="@+id/agree_privacy_policy_check"
-                    android:text="@string/agree_privacy_policy_text1" />
-
-                <TextView
-                    android:id="@+id/agree_privacy_policy_text2"
-                    style="@style/tradeGothicLTStd_Dynamic18"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/agree_privacy_policy_text1"
-                    android:layout_toRightOf="@+id/agree_privacy_policy_check"
-                    android:labelFor="@+id/agree_privacy_policy_check"
-                    android:text="@string/agree_privacy_policy_text2"
-                    android:textColor="@color/accent"
-                    android:textStyle="bold" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/agree_legal_dependent_layout"
+            <LinearLayout
+                android:id="@+id/payment_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="18dp"
-                android:layout_marginLeft="18dp"
-                android:layout_marginRight="28dp">
-
-                <android.support.v7.widget.AppCompatCheckBox
-                    android:id="@+id/agree_legal_dependent_check"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="top" />
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/agree_legal_dependent_text"
                     style="@style/tradeGothicLTStd_Dynamic18"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/agree_legal_dependent_check"
-                    android:labelFor="@+id/agree_legal_dependent_check"
-                    android:text="@string/agree_legal_dependent_text" />
-            </RelativeLayout>
+                    android:layout_marginTop="32dp"
+                    android:text="@string/payment_information_prompt"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/payment_method_info"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    tools:text="@string/no_payment_method" />
+
+                <Button
+                    android:id="@+id/payment_method_button"
+                    style="@style/db_scheduleButtonStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/update_payment_method_button" />
+            </LinearLayout>
         </LinearLayout>
 
         <ProgressBar
