--- a/MyHome/app/src/main/res/layout/fragment_filter.xml
+++ b/MyHome/app/src/main/res/layout/fragment_filter.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="58dp">
 
-                      <TextView
+            <TextView
                 android:id="@+id/dialog_close"
                 style="@style/tradeGothicLTStd_Dynamic18"
                 android:layout_width="wrap_content"
@@ -246,6 +246,7 @@
                                 style="@style/tradeGothicLTStd_Dynamic18"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:contentDescription="@string/accepting_new_patients"
                                 android:textAlignment="textEnd" />
 
                             <TextView
