--- a/MyHome/app/src/main/res/layout/fragment_pharmacy_list.xml
+++ b/MyHome/app/src/main/res/layout/fragment_pharmacy_list.xml
@@ -28,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/pharmacySearch"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:visibility="gone" />
