--- a/MyHome/app/src/main/res/layout/fingerprint_dialog_container.xml
+++ b/MyHome/app/src/main/res/layout/fingerprint_dialog_container.xml
@@ -48,6 +48,7 @@
         <Button
             android:id="@+id/cancel_button"
             style="?android:attr/buttonBarNegativeButtonStyle"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
