--- a/MyHome/app/src/main/res/layout/fragment_my_care_intake.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_intake.xml
@@ -127,8 +127,9 @@
             </LinearLayout>
 
             <RelativeLayout
-                android:importantForAccessibility="yes"
                 android:id="@+id/agree_privacy_policy_layout"
+                android:importantForAccessibility="yes"
+                android:contentDescription="@string/agree_privacy_policy_whole"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="18dp"
