Bug Id 30275 : Accessibility - talkback v1.6.3- Book appointment - filter - location label is not announced is fixed. 1. Added new View to use a label view for the EditText as we can't add content description for the edit text directly.

--- a/MyHome/app/src/main/res/layout/fragment_filter.xml
+++ b/MyHome/app/src/main/res/layout/fragment_filter.xml
@@ -78,6 +78,12 @@
                     android:layout_height="wrap_content"
                     android:focusableInTouchMode="true"
                     android:orientation="vertical">
+                    <View
+                        android:id="@+id/lable_filterLocation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:labelFor="@id/filterLocation"
+                        android:contentDescription="@string/location"/>
 
                     <EditText
                         android:id="@+id/filterLocation"
