--- a/MyHome/app/src/main/res/layout/environment_selector.xml
+++ b/MyHome/app/src/main/res/layout/environment_selector.xml
@@ -57,6 +57,13 @@
                     android:text="@string/dev" />
 
                 <RadioButton
+                    android:id="@+id/radio_test"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/test" />
+
+                <RadioButton
                     android:id="@+id/radio_slot1"
                     style="@style/tradeGothicLTStd_Dynamic18"
                     android:layout_width="wrap_content"
