--- a/MyHome/app/src/main/res/layout/fragment_my_care_providers.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_providers.xml
@@ -23,7 +23,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="30dp"
         android:layout_marginTop="12dp"
-        android:enabled="false"
+        android:visibility="gone"
         android:text="@string/next_available_provider" />
 
     <View
