Added a Demo environment that uses only Mocked responses. Moved mock json responses to the res/raw folder (so we can see them in the main app).

--- a/MyHome/app/src/main/res/layout/environment_selector.xml
+++ b/MyHome/app/src/main/res/layout/environment_selector.xml
@@ -50,6 +50,13 @@
                 android:layout_margin="6dp">
 
                 <RadioButton
+                    android:id="@+id/radio_demo"
+                    style="@style/tradeGothicLTStd_Dynamic18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/demo" />
+
+                <RadioButton
                     android:id="@+id/radio_dev"
                     style="@style/tradeGothicLTStd_Dynamic18"
                     android:layout_width="wrap_content"
