--- a/MyHome/app/src/main/res/layout/book_dialog_insurance.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_insurance.xml
@@ -13,14 +13,23 @@
         android:paddingRight="18dp"
         android:paddingTop="18dp">
 
+        <View
+            android:id="@+id/label_provider_plan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/insurance_plan"
+            android:labelFor="@id/provider_plan" />
+
         <TextView
             android:id="@+id/provider_plan_label"
             style="@style/tradeGothicLTStdLight_14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
+            android:importantForAccessibility="no"
             android:text="@string/insurance_plan"
             android:textColor="@color/text_darker" />
+
 
         <Spinner
             android:id="@+id/provider_plan"
@@ -36,6 +45,13 @@
             app:errorEnabled="true"
             app:errorTextAppearance="@style/error_appearance"
             app:hintTextAppearance="@style/hint_appearance">
+
+            <View
+                android:id="@+id/label_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/member_id"
+                android:labelFor="@id/id" />
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/id"
@@ -58,6 +74,13 @@
             app:errorTextAppearance="@style/error_appearance"
             app:hintTextAppearance="@style/hint_appearance">
 
+            <View
+                android:id="@+id/label_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/group_id"
+                android:labelFor="@id/group" />
+
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/group"
                 android:layout_width="match_parent"
@@ -78,6 +101,13 @@
             app:errorEnabled="true"
             app:errorTextAppearance="@style/error_appearance"
             app:hintTextAppearance="@style/hint_appearance">
+
+            <View
+                android:id="@+id/label_insurance_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/insurance_phone_number"
+                android:labelFor="@id/insurance_phone" />
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/insurance_phone"
