--- a/MyHome/app/src/main/res/layout/visit_summary.xml
+++ b/MyHome/app/src/main/res/layout/visit_summary.xml
@@ -163,10 +163,10 @@
             android:id="@+id/entire_email_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="12dp"
             android:layout_marginEnd="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="12dp"
             android:orientation="vertical">
 
             <TextView
@@ -176,11 +176,24 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="6dp"
                 android:layout_marginTop="10dp"
-                android:gravity="left"
                 android:contentDescription="@string/visit_summary_email_confidential"
+                android:gravity="left"
                 android:text="@string/visit_summary_email_confidential"
                 android:textColor="@color/db_charcoal_grey"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/email_count_max_reached"
+                style="@style/tradeGothicLTStdLight_18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:contentDescription="@string/email_count_max_reached"
+                android:gravity="left"
+                android:text="@string/email_count_max_reached"
+                android:textColor="@color/db_charcoal_grey"
+                android:visibility="gone" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -192,25 +205,9 @@
                     android:id="@+id/email_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="15dp"
                     android:scrollbars="none" />
             </RelativeLayout>
-
-            <TextView
-                android:id="@+id/add_additional_email"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@id/email_list"
-                android:layout_marginTop="14dp"
-                android:layout_marginBottom="11dp"
-                android:layout_marginLeft="2dp"
-                android:contentDescription="@string/add_additional_email_content_desc"
-                android:gravity="left"
-                android:text="@string/add_additional_email"
-                android:textColor="@color/accent"
-                android:textStyle="bold" />
 
             <RelativeLayout
                 android:id="@+id/new_email_layout"
